# Annotations2Sub

./: .gitignore  .gitpod.yml  .licrc  Annotation2Sub.py  Annotations2Sub.py  CHANGELOG.md  DOCUMENTATION.md  MANIFEST.in  README-zh.md  README.md  SECURITY.md  en.mo  en.po  pyproject.toml  rebuild.py  setup.cfg  t1.py  文档.md  新版变化.md  读我.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  lint-check.yml  python-package.yml  python-publish.yml  release.yml  test-build.yml  test.yml
annotations2sub/: Annotations2Sub.py
annotations2sub/translations/en_US/LC_MESSAGES/: Annotations2Sub.mo
docs/: Wiki.en.md  Wiki.zh.md
locale/en_US/LC_MESSAGES/: en.mo  en.po
src/: README.md  test_init.py
src/Annotations2Sub/: Annotation.py  Annotations.py  Annotations2Sub.py  Color.py  Convert.py  Sub.py  Tag.py  _Convert.py  _Sub.py  __dummy__.py  __init__.py  __main__.py  __version__.py  _flags.py  _main.py  cli.py  cli_utils.py  color.py  convert.py  dummy.py  flag.py  i18n.py  internationalization.py  locales.py  main.py  repl.py  subtitles.py  t1.py  tag.py  tools.py  utils.py  utils2.py  windows.py
src/Annotations2Sub/locales/en/LC_MESSAGES/: Annotations2Sub.mo  Annotations2Sub.po
src/Annotations2Sub/locales/zh/LC_MESSAGES/: Annotations2Sub.mo  Annotations2Sub.po
src/Annotations2Sub/subtitles/: CONSTANT.py  __init__.py  constant.py  draw.py  event.py  info.py  style.py  subtitles.py  tag.py  utils.py
src/tests/: __init__.py  test_Annotation.py  test_Annotations2Sub.py  test_Baseline.py  test_Color.py  test_Convert.py  test_Sub.py  test_addendum.py  test_baseline.py  test_cli.py  test_cli_network.py  test_cli_utils.py  test_flags.py  test_i18n.py  test_other.py  test_repl.py  test_tools.py  test_utils.py  test_utils2.py
src/tests/Baseline/: 29-q7YnyUmY.xml.ass.test  e8kKeUuytqA.ass.test  e8kKeUuytqA.xml.ass.test  e8kKeUuytqA.xml.test
src/tests/test/: 2.xml.test
src/tests/testCase/: annotation.xml.test  annotations.ass.test  annotations.xml.test  file2.test
src/tests/testCase/Baseline/: 29-q7YnyUmY.ass.test  29-q7YnyUmY.libass.ass.test  29-q7YnyUmY.transform.ass.test  29-q7YnyUmY.xml.test  M2ryDEyyrXE.ass.test  M2ryDEyyrXE.transform.ass.test  M2ryDEyyrXE.xml.test  annotation.ass.test  annotation.libass.ass.test  annotation.transform.ass.test  annotation.xml.test  annotations.ass.test  annotations.transform.ass.test  annotations.xml.test  annotations2.ass.test  annotations2.transform.ass.test  annotations2.xml.test  annotations3.ass.test  annotations3.transform.ass.test  annotations3.xml.test  c1iCjpxDxz4.ass.test  c1iCjpxDxz4.transform.ass.test  c1iCjpxDxz4.xml.test  e8kKeUuytqA.ass.test  e8kKeUuytqA.libass.ass.test  e8kKeUuytqA.transform.ass.test  e8kKeUuytqA.xml.test  g-0i6MOh7n0.ass.test  g-0i6MOh7n0.transform.ass.test  g-0i6MOh7n0.xml.test
src/tests/unittest/: test_Annotation.py  test_Annotations2Sub.py  test_Color.py  test_Sub.py  test_Subtitles.py  test_cli.py  test_cli_utils.py  test_dummy.py  test_flags.py  test_i18n.py  test_utils.py  test_version.py
tests/: test_Annotation.py  test_Annotations2Sub.py  test_Color.py  test_Convert.py  test_Sub.py  test_internationalization.py  test_tools.py  xml.test
tests/Annotations2Sub/: test_Sub.py
