[metadata]
name = Annotations2Sub
version = 0.1.31
author = 我如天翼
author_email = wrtyis@outlook.com
description = A script that can convert Youtube Annotation into ASS(Sub Station Alpha V4) subtitles files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USED255/Annotations2Sub
project_urls =
    Bug Tracker = https://github.com/USED255/Annotations2Sub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = defusedxml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    Annotations2Sub = Annotations2Sub.cli:main

[options.package_data]
Annotations2Sub = 
    locales/zh/LC_MESSAGES/Annotations2Sub.mo
    locales/en/LC_MESSAGES/Annotations2Sub.mo
