[metadata]
name = Annotations2Sub
version = 0.1.36
author = 我如天翼
author_email = wrtyis@outlook.com
description = A script that can convert Youtube Annotation into ASS(Sub Station Alpha V4) subtitles files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USED255/Annotations2Sub
project_urls =
    Bug Tracker = https://github.com/USED255/Annotations2Sub/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = defusedxml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    Annotations2Sub = Annotations2Sub.cli:main

[options.package_data]
Annotations2Sub = 
    locales/zh/LC_MESSAGES/Annotations2Sub.mo
    locales/en/LC_MESSAGES/Annotations2Sub.mo
