[metadata]
name = Annotations2Sub
version = 2.17.0
author = 我如天翼
author_email = wrtyis@outlook.com
description = Download and convert Youtube Annotations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USED255/Annotations2Sub
project_urls =
    Bug Tracker = https://github.com/USED255/Annotations2Sub/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts =
    Annotations2Sub = Annotations2Sub.main:main

[options.package_data]
Annotations2Sub = 
    locales/zh/LC_MESSAGES/Annotations2Sub.mo
    locales/en/LC_MESSAGES/Annotations2Sub.mo
